--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,23 @@ h1{
   color: #ffffff;
 }
 
+.titulo{
+  font-size: 30px;
+  text-align: center; 
+  padding-bottom: 0px; 
+  color: #000000;
+  background-color:#fbfbfb;
+}  
+
+.titulo1{
+  font-size: 25px;
+  text-align: left; 
+  padding-bottom: 0px; 
+  color: #000000;
+  background-color:#fbfbfb;
+}  
+
+
 h2{
     background-color:#fbfbfb;
 }  
@@ -108,6 +125,10 @@ p{
   color: #0e0e0e; 
 }
 
+.p{
+  font-size: 14px; 
+  color: #0e0e0e; 
+}
 
 ::-webkit-input-placeholder {
  color: #a8a8a8;
@@ -132,10 +153,20 @@ p{
 
 .contenedor{
     position: relative;
-    
     text-align: center;
     background-size:contain;
+    margin: 50px;
 }
+
+.contenedor2{
+  height: 50px;
+  width: auto;
+  margin: 100px;
+  text-align: center;
+  background-size:contain;
+  margin-bottom: 10%;
+}
+
 
 .texto-encima{
     position: absolute;
@@ -194,9 +225,11 @@ a{
 }
 
 #header {
-    margin:auto;
-    width:500px;
+    height: 100px;
+    margin: 0%;
+    width: 100%;
     font-family:Arial, Helvetica, sans-serif;
+    text-align: center;
 }
 
 ul, ol {
@@ -239,3 +272,21 @@ ul, ol {
     top:0px;
 }
 
+/* Footer */
+
+.contenedor3{
+  height: 100px;
+  width: auto;
+  margin: 10px;
+  text-align: center;
+  background-size:cover;
+  background-color:#000000;
+}
+
+.footer_link{
+  color: #ffffff;
+}
+
+.footer_text{
+  color: #ffffff;
+}
