--- a/css/style.css
+++ b/css/style.css
@@ -225,11 +225,13 @@ a{
 }
 
 #header {
-    height: 100px;
-    margin: 0%;
-    width: 100%;
+    height: 120px;
+    margin: 0% auto;
+    width:  100%;
     font-family:Arial, Helvetica, sans-serif;
     text-align: center;
+    line-height: 100px;
+    background-color: #000;
 }
 
 ul, ol {
@@ -239,6 +241,7 @@ ul, ol {
 
 .nav > ul > li {
     float:left;
+    margin: 0% auto;
 }
 
 .nav ul li a {
