--- a/css/style.css
+++ b/css/style.css
@@ -286,10 +286,28 @@ ul, ol {
   background-color:#000000;
 }
 
+
+
 .footer_link{
   color: #ffffff;
 }
 
 .footer_text{
   color: #ffffff;
+}
+
+@media (max-width: 320px) {
+
+  .container {
+  
+  grid-template-areas: 
+  
+  "header"
+  
+  "main"
+  
+  "section"
+  
+  "footer"
+  }
 }
