--- a/css/style.css
+++ b/css/style.css
@@ -313,6 +313,8 @@ ul, ol {
   "footer footer footer";
   column-gap: 20px;
   row-gap: 20px;
+  justify-content: center;
+  align-items: center;
 }
 
 .header{
@@ -370,6 +372,12 @@ ul, ol {
     .section{
       grid-area: section;
     }
+    .section2{
+      grid-area: section2;
+    }
+    .section3{
+      grid-area: section3;
+    }
     .footer{
       grid-area: footer;
     }
@@ -399,7 +407,8 @@ ul, ol {
   .header{
     grid-area: header;
   }
-  .nav{
+  .nav ul li a{
+  grid-area: header;
   display: flex;
   flex-direction: column;
 }
@@ -408,6 +417,12 @@ ul, ol {
   }
   .section{
     grid-area: section;
+  }
+  .section2{
+    grid-area: section2;
+  }    
+  .section3{
+    grid-area: section3;
   }
   .footer{
     grid-area: footer;
